--- a/kilde-assignment-api/build.gradle
+++ b/kilde-assignment-api/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web:${spring_boot}"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:${spring_boot}"
     implementation "org.springframework.boot:spring-boot-starter-security:${spring_boot}"
+    implementation "joda-time:joda-time:${joda_time}"
 
     implementation "com.mysql:mysql-connector-j:${mysql}"
 
