--- a/kilde-assignment-api/build.gradle
+++ b/kilde-assignment-api/build.gradle
@@ -38,12 +38,18 @@ dependencies {
 
     compileOnly "org.projectlombok:lombok:${lombok}"
     annotationProcessor "org.projectlombok:lombok:${lombok}"
+
+    testImplementation "org.springframework.boot:spring-boot-starter-test:${spring_boot}"
 }
 
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${spring_cloud}"
     }
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
 
 bootJar {
